RESOLVED FIXED67444
STIX glyphs not rendered on this stackoverflow answer
https://bugs.webkit.org/show_bug.cgi?id=67444
Summary STIX glyphs not rendered on this stackoverflow answer
mitz
Reported 2011-09-01 15:02:54 PDT
STIX glyphs not rendered on this stackoverflow answer
Attachments
Patch (40.36 KB, patch)
2011-09-01 15:09 PDT, mitz
darin: review+
mitz
Comment 1 2011-09-01 15:03:24 PDT
mitz
Comment 2 2011-09-01 15:09:55 PDT
Joseph Pecoraro
Comment 3 2011-09-01 15:30:25 PDT
mitz
Comment 4 2011-09-01 15:32:48 PDT
James Robinson
Comment 5 2011-09-01 16:46:22 PDT
The following tests have different pixel output on chromium mac now: fast/css/font-face-opentype.html svg/W3C-SVG-1.1/fonts-glyph-03-t.svg svg/W3C-SVG-1.1/fonts-glyph-04-t.svg svg/batik/text/xmlSpace.svg svg/custom/glyph-selection-lang-attribute.svg svg/custom/svg-fonts-without-missing-glyph.xhtml the new output does not look better, for example on fast/css/font-face-opentype.html a bunch of glyphs are missing: expected: http://build.chromium.org/f/chromium/layout_test_results/Webkit_Mac10_6__CG_/results/layout-test-results/fast/css/font-face-opentype-expected.png actual: http://build.chromium.org/f/chromium/layout_test_results/Webkit_Mac10_6__CG_/results/layout-test-results/fast/css/font-face-opentype-actual.png on the other tests the text metrics seem wrong, for example on svg/custom/glyph-selection-lang-attribute.svg the 'a' glyphs have changed size: expected: http://build.chromium.org/f/chromium/layout_test_results/Webkit_Mac10_6__CG_/results/layout-test-results/svg/custom/glyph-selection-lang-attribute-expected.png actual: http://build.chromium.org/f/chromium/layout_test_results/Webkit_Mac10_6__CG_/results/layout-test-results/svg/custom/glyph-selection-lang-attribute-actual.png
mitz
Comment 6 2011-09-01 16:52:22 PDT
Thanks for noticing these differences. I am looking into them.
James Robinson
Comment 7 2011-09-01 16:53:02 PDT
Reopen because I think there's a real bug here, feel free to close if I'm mistaken.
mitz
Comment 8 2011-09-01 17:15:50 PDT
Committed revision 94368.
Note You need to log in before you can comment on or make changes to this bug.