<rdar://problem/9528843> STIX glyphs not rendered on this stackoverflow answer https://bugs.webkit.org/show_bug.cgi?id=67444

Reviewed by Darin Adler.

Source/WebCore:

Test: fast/text/fallback-traits-fixup.html

After obtaining STIX Regular as a fallback font for some characters, getFontDataForCharacters()
proceeded to ask for a font from the same family having the desired traits and weight (because
wkGetFontInLanguageForRange() does not preserve traits and weight). The returned font was different
and happened to not contain the desired character.

* platform/graphics/mac/FontCacheMac.mm:
(WebCore::FontCache::getFontDataForCharacters): Only ask for a family member with the desired
traits and weight if the substitute font does not already have them, and only use the returned
member if it actually contains the desired character.

LayoutTests:

* fast/text/fallback-traits-fixup.html: Added.
* platform/mac/fast/text/fallback-traits-fixup-expected.png: Added.
* platform/mac/fast/text/fallback-traits-fixup-expected.txt: Added.



Canonical link: https://commits.webkit.org/83261@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94352 268f45cc-cd09-0410-ab3c-d52691b4dbfc